chore: update spring.boot to 3.2.4